--- a/src/styles/article-detail.css
+++ b/src/styles/article-detail.css
@@ -786,6 +786,7 @@ background-color: #e2e3e3;
     color: white;
 }
 
+@media (max-width: 1200px) {
 [data-theme="dark"]
     .article-container {
 width: 100%;
@@ -798,5 +799,6 @@ width: 100%;
         overflow: hidden;
         transition: all 0.3s;
         color: white;
+}
 }
 
